--- a/html/header.html
+++ b/html/header.html
@@ -1,4 +1,4 @@
-<header class="header _anim-item _anim-scale _anim-no-hide _not-active">
+<header class="header">
 	<div class="header__container-big">
 		<div class="header__wrapper">
 			<div class="header__logo">
@@ -25,9 +25,9 @@
 			<div class="header__content header-content">
 				<div class="header-content__wrapper">
 					<div class="header__menu menu">
-						<nav id="nav" class="menu__body">
+						<nav id="nav" class="menu__body _anim-item _anim-translate_left _not-active _anim-translate_z">
 							<!-- <div id="pointer" class="menu__pointer"></div> -->
-							<ul class="menu__list _anim-item _not-active _anim-translate_left">
+							<ul class="menu__list _anim-body">
 								<li class="underline"><a href="##" id="menu-link" class="menu__link">Our Plan</a></li>
 								<li class="underline"><a href="##" id="menu-link" class="menu__link">Employers</a></li>
 								<li class="underline"><a href="##" id="menu-link" class="menu__link">Brokers</a></li>
