--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 				<div class="hero__content">
 					<div class="hero__container _anim-item _anim-scale _not-active">
 						<div class="hero__offer offer">
-							<h2 class="offer__title title _anim-item _anim-translate_bottom _anim-delay_200 _not-active">
-								<div class="_anim-body">
+							<div class="_anim-item _anim-translate_bottom _anim-delay_200 _not-active">
+								<h2 class="offer__title title _anim-body">
 									Give your team peace of mind with supplemental health insurance from Brella.
-								</div>
-							</h2>
+								</h2>
+							</div>
 							<div class="text offer__text _anim-item _anim-translate_bottom _anim-delay_400 _not-active">
 								<p class="_anim-body">I'm wondering...</p>
 							</div>
