--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 	family=Roboto:wght@400;700&
 
-	display=swap&_v=20220911153919" rel="stylesheet">
-	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css?_v=20220911153919">
-	<link rel="stylesheet" href="css/style.min.css?_v=20220911153919">
+	display=swap&_v=20220912132831" rel="stylesheet">
+	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css?_v=20220912132831">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220912132831">
 </head>
 
 <body>
@@ -89,11 +89,11 @@
 				<div class="hero__content">
 					<div class="hero__container _anim-item _anim-scale _not-active">
 						<div class="hero__offer offer">
-							<h2 class="offer__title title _anim-item _anim-translate_bottom _anim-delay_200 _not-active">
-								<div class="_anim-body">
+							<div class="_anim-item _anim-translate_bottom _anim-delay_200 _not-active">
+								<h2 class="offer__title title _anim-body">
 									Give your team peace of mind with supplemental health insurance from Brella.
-								</div>
-							</h2>
+								</h2>
+							</div>
 							<div class="text offer__text _anim-item _anim-translate_bottom _anim-delay_400 _not-active">
 								<p class="_anim-body">I'm wondering...</p>
 							</div>
@@ -704,7 +704,7 @@
 	</div>
 </footer>
 	</div>
-	<script src="js/app.min.js?_v=20220911153919"></script>
+	<script src="js/app.min.js?_v=20220912132831"></script>
 </body>
 
 </html>
